# backmysol_contract

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/backmysol_contract/: Cargo.toml
programs/backmysol_contract/src/: lib.rs
scripts/: check_admin.ts  check_config.ts  initialize.ts  initialize_mainnet.ts
tests/: backmysol.ts  clean_and_distribute.ts  create_trash.ts  full_scenario.ts  mint_to_target.ts  sol_flow_demo.ts  update-config.ts
tests/keypairs/: user_a.json  user_b.json
